--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "express": "3.x",
     "winston": "0.7.x",
     "convict": "0.1.x",
-    "ejs": "0.8.x",
+    "ejs": "2.6.1",
     "ws": "0.4.x"
   }
 }
